--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Xijun Wang</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="education.html">Education</a></div>
 <div class="menu-item"><a href="research.html">Research</a></div>
 <div class="menu-item"><a href="group.html">Group</a></div>
@@ -42,7 +42,7 @@ spectrum sharing, stochastic geometry, random graph, deep reinforcement learning
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-27 16:54:31 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-08-27 17:18:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
