--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h1>Xijun Wang 王玺钧</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="Xijun_Wang.JPG" alt="alt text" width="150px" height="HEIGHTpx" />&nbsp;</td>
+<img src="Xijun_Wang.jpg" alt="alt text" width="150px" height="HEIGHTpx" />&nbsp;</td>
 <td align="left"><p><b>Associate Professor</b></p>
 <p>School of Electronics and Communication Engineering (SECE), Sun Yat-sen University</p>
 <p>Email: wangxijun[at]mail.sysu.edu.cn</p>
@@ -42,7 +42,7 @@ spectrum sharing, stochastic geometry, random graph, deep reinforcement learning
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-27 17:18:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-08-27 20:54:28 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
