--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div class="menu-item"><a href="publications.html">Publications&nbsp;(by&nbsp;year)</a></div>
 <div class="menu-item"><a href="publicationstopic.html">Publications&nbsp;(by&nbsp;topic)</a></div>
 <div class="menu-item"><a href="talks.html">Talks</a></div>
+<div class="menu-item"><a href="list.html">Reading&nbsp;List</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -31,18 +32,25 @@
 <p>School of Electronics and Communication Engineering (SECE), Sun Yat-sen University</p>
 <p>Email: wangxijun[at]mail.sysu.edu.cn</p>
 <p>Office: Mingde Yuan, Xiaoguwei Island, Panyu District, Guangzhou, 510006, China.</p>
-<p><b>Research areas</b>: 
-spectrum sharing, stochastic geometry, random graph, deep reinforcement learning.
-<a href="https://scholar.google.com/citations?user=DgTXHKcAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>[Google Citations]</a></p>
+<p><a href="https://scholar.google.com/citations?user=DgTXHKcAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>[Google Citations]</a></p>
 </td></tr></table>
+<h2>Research areas</h2>
+<ul>
+<li><p>Theory: stochastic geometry, graph theory, reinforcement learning.</p>
+</li>
+<li><p>Applicatoins: spectrum sharing, UAV communications, edge computing.</p>
+</li>
+</ul>
 <h2>News</h2>
 <ul>
+<li><p>招收2019年推免研究生1名 <a href="https://mp.weixin.qq.com/s/rqyccWO6MYIqx46Cu_AdtA" target=&ldquo;blank&rdquo;>[报名信息]</a></p>
+</li>
 <li><p>July 2018, I have moved to SYSU. </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-27 20:54:28 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-18 21:27:38 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
