--- a/DRL.html
+++ b/DRL.html
@@ -27,6 +27,17 @@
 <h1>Deep Reinforcement Learning</h1>
 </div>
 <p>This page contains a list of the papers about the deep reinforcement learning, organized in sections by subject.</p>
+<h2>Books &amp; Courses</h2>
+<ol>
+<li><p><a href="http://incompleteideas.net/book/the-book-2nd.html" target=&ldquo;blank&rdquo;><i>Reinforcement Learning: An Introduction</i></a>, by Richard S. Sutton and Andrew G. Barto, 2018</p>
+</li>
+<li><p><a href="http://www0.cs.ucl.ac.uk/staff/D.Silver/web/Teaching.html" target=&ldquo;blank&rdquo;><i>UCL Course on reinforcement learning</i></a>, by David Silver, 2015</p>
+</li>
+<li><p><a href="http://rail.eecs.berkeley.edu/deeprlcourse/" target=&ldquo;blank&rdquo;><i>UC Berkeley Course on deep reinforcement learning</i></a>, by Sergey Levine</p>
+</li>
+<li><p><a href="https://simoninithomas.github.io/Deep_reinforcement_learning_Course/" target=&ldquo;blank&rdquo;><i>Deep reinforcement learning Course with Tensorflow</i></a>, by Thomas Simonini</p>
+</li>
+</ol>
 <h2>Survey</h2>
 <ol>
 <li><p><a href="https://devblogs.nvidia.com/deep-learning-nutshell-reinforcement-learning/" target=&ldquo;blank&rdquo;>Deep Learning in a Nutshell: Reinforcement Learning</a></p>
@@ -34,7 +45,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-18 21:27:39 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-26 13:29:46 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="DRL.jemdoc">source</a>)
 </div>
 </div>
