--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 <ul>
 <li><p>招收2019年推免研究生1名 <a href="https://mp.weixin.qq.com/s/rqyccWO6MYIqx46Cu_AdtA" target=&ldquo;blank&rdquo;>[报名信息]</a></p>
 </li>
-<li><p>July 2018, I have moved to SYSU. </p>
+<li><p>Since July 2018, I have moved to SYSU. </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-18 21:27:38 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-26 13:29:46 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+(<a href="index.jemdoc">source</a>)
 </div>
 </div>
 </td>
