--- a/ACLab.html
+++ b/ACLab.html
@@ -30,9 +30,9 @@
 <p>Introductory experimental laboratory explores the design, construction, and debugging of analog electronic circuits. </p>
 <h2>Handouts</h2>
 <ul>
-<li><p>Lab 01, <a href="teaching/ACLab/01-单级交流放大器.pdf" target=&ldquo;blank&rdquo;>单级交流放大器</a></p>
+<li><p>Lab 01, <a href="Handouts/ACLab/01-单级交流放大器.pdf" target=&ldquo;blank&rdquo;>单级交流放大器</a></p>
 </li>
-<li><p>Lab 02, <a href="teaching/ACLab/02-两级阻容耦合放大电路.pdf" target=&ldquo;blank&rdquo;>两级阻容耦合放大电路</a></p>
+<li><p>Lab 02, <a href="Handouts/ACLab/02-两级阻容耦合放大电路.pdf" target=&ldquo;blank&rdquo;>两级阻容耦合放大电路</a></p>
 </li>
 </ul>
 <h2>Resources</h2>
@@ -42,7 +42,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-26 13:29:46 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-26 13:43:31 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
