--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <div class="menu-item"><a href="publicationstopic.html">Publications&nbsp;(by&nbsp;topic)</a></div>
 <div class="menu-item"><a href="talks.html">Talks</a></div>
 <div class="menu-item"><a href="list.html">Reading&nbsp;List</a></div>
+<a href="http://www.clustrmaps.com/map/Wang-xijun.github.io" title="Visit tracker for Wang-xijun.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4" /></a>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -50,7 +51,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-26 22:35:02 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-26 22:38:40 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
