--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-26 22:43:28 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-09-26 22:45:35 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
-<a href="http://www.clustrmaps.com/map/Wang-xijun.github.io" title="Visit tracker for Wang-xijun.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4" /></a>
-<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4"></script>
-<a href="http://www.clustrmaps.com/map/Wang-xijun.github.io" title="Visit tracker for Wang-xijun.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4" /></a>
-<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4"></script>
+</td>
+</tr>
+</table>
 </body>
 </html>
