--- a/ACLab.html
+++ b/ACLab.html
@@ -34,6 +34,8 @@
 </li>
 <li><p>Lab 02, <a href="Handouts/ACLab/02-两级阻容耦合放大电路.pdf" target=&ldquo;blank&rdquo;>两级阻容耦合放大电路</a></p>
 </li>
+<li><p>Lab 03, <a href="Handouts/ACLab/03-负反馈放大电路.pdf" target=&ldquo;blank&rdquo;>负反馈放大电路</a></p>
+</li>
 </ul>
 <h2>Resources</h2>
 <ul>
@@ -42,7 +44,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-09-26 22:47:29 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-10-10 15:18:57 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
