--- a/ACLab.html
+++ b/ACLab.html
@@ -36,15 +36,19 @@
 </li>
 <li><p>Lab 03, <a href="Handouts/ACLab/03-负反馈放大电路.pdf" target=&ldquo;blank&rdquo;>负反馈放大电路</a></p>
 </li>
+<li><p>Lab 04, <a href="Handouts/ACLab/03-差动放大电路.pdf" target=&ldquo;blank&rdquo;>差动放大电路</a></p>
+</li>
 </ul>
 <h2>Resources</h2>
 <ul>
 <li><p><a href="http://web.mit.edu/6.101/www/s2018/index.html" target=&ldquo;blank&rdquo;><i>MIT Course on Analog Electronics Lab</i></a>, by Gim Hom, 2018</p>
 </li>
+<li><p><a href="http://www.dwenzhao.cn/profession/proteus/proteus1.html" target=&ldquo;blank&rdquo;>/Proteus 虚拟仿真工具</a></p>
+</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-10-14 10:13:58 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-10-31 15:50:41 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
