--- a/ACLab.html
+++ b/ACLab.html
@@ -38,6 +38,8 @@
 </li>
 <li><p>Lab 04, <a href="Handouts/ACLab/04-差动放大电路.pdf" target=&ldquo;blank&rdquo;>差动放大电路</a></p>
 </li>
+<li><p>Lab 05, <a href="Handouts/ACLab/05-互补对称功率放大器.pdf" target=&ldquo;blank&rdquo;>互补对称功率放大器</a></p>
+</li>
 </ul>
 <h2>Resources</h2>
 <ul>
@@ -48,7 +50,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-10-31 15:52:05 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-11-15 13:43:35 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
