--- a/ACLab.html
+++ b/ACLab.html
@@ -40,6 +40,8 @@
 </li>
 <li><p>Lab 05, <a href="Handouts/ACLab/05-互补对称功率放大器.pdf" target=&ldquo;blank&rdquo;>互补对称功率放大器</a></p>
 </li>
+<li><p>Lab 06, <a href="Handouts/ACLab/06-比例求和运算电路.pdf" target=&ldquo;blank&rdquo;>0比例求和运算电路</a></p>
+</li>
 </ul>
 <h2>Resources</h2>
 <ul>
@@ -50,7 +52,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-11-15 13:43:35 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-11-22 14:17:45 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
