--- a/ACLab.html
+++ b/ACLab.html
@@ -40,7 +40,9 @@
 </li>
 <li><p>Lab 05, <a href="Handouts/ACLab/05-互补对称功率放大器.pdf" target=&ldquo;blank&rdquo;>互补对称功率放大器</a></p>
 </li>
-<li><p>Lab 06, <a href="Handouts/ACLab/06-比例求和运算电路.pdf" target=&ldquo;blank&rdquo;>0比例求和运算电路</a></p>
+<li><p>Lab 06, <a href="Handouts/ACLab/06-比例求和运算电路.pdf" target=&ldquo;blank&rdquo;>比例求和运算电路</a></p>
+</li>
+<li><p>Lab 07, <a href="Handouts/ACLab/07-积分与微分电路.pdf" target=&ldquo;blank&rdquo;>积分与微分电路</a></p>
 </li>
 </ul>
 <h2>Resources</h2>
@@ -52,7 +54,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-11-22 14:17:45 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-11-29 13:54:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
