--- a/ACLab.html
+++ b/ACLab.html
@@ -44,17 +44,31 @@
 </li>
 <li><p>Lab 07, <a href="Handouts/ACLab/07-积分与微分电路.pdf" target=&ldquo;blank&rdquo;>积分与微分电路</a></p>
 </li>
+<li><p>Lab 08, <a href="Handouts/ACLab/08-波形发生电路.pdf" target=&ldquo;blank&rdquo;>波形发生电路</a></p>
+</li>
+</ul>
+<h2>Final Projects</h2>
+<ul>
+<li><p>正弦波振荡器
+<br />正弦波振荡电路是在没有外加输入信号的情况下，依靠电路自激振荡而产生正弦波输出电压的电路。
+广泛应用于通讯、广播、电视等系统，如无线电 通讯发射机中的载波产生电路、超外差接收机中的本机振荡电路等。
+<br />本实验要求产生的正弦波振幅稳定，振荡频率在较宽范围内连续可调。先通过仿真软件验证电路功能。</p>
+</li>
 </ul>
 <h2>Resources</h2>
 <ul>
+<li><p><a href="https://www.electronics-tutorials.ws" target=&ldquo;blank&rdquo;><i>Electronics Tutorials</i></a></p>
+</li>
+<li><p><a href="https://wiki.analog.com/university/courses/electronics/labs" target=&ldquo;blank&rdquo;><i>Lab Activity Material by AD</i></a></p>
+</li>
 <li><p><a href="http://web.mit.edu/6.101/www/s2018/index.html" target=&ldquo;blank&rdquo;><i>MIT Course on Analog Electronics Lab</i></a>, by Gim Hom, 2018</p>
 </li>
-<li><p><a href="http://www.dwenzhao.cn/profession/proteus/proteus1.html" target=&ldquo;blank&rdquo;>/Proteus 虚拟仿真工具</a></p>
+<li><p><a href="http://www.dwenzhao.cn/profession/proteus/proteus1.html" target=&ldquo;blank&rdquo;><i>Proteus 虚拟仿真工具</i></a></p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-11-29 13:54:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-12-14 22:07:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
