--- a/teaching.html
+++ b/teaching.html
@@ -29,10 +29,12 @@
 <ul>
 <li><p><a href="ACLab.html" target=&ldquo;blank&rdquo;>Analog Circuits Laboratory</a>, SYSU, Autumn 2018.</p>
 </li>
+<li><p><a href="Handouts/无线通信之频谱共享.pdf" target=&ldquo;blank&rdquo;>电子信息技术导论-无线通信之频谱共享</a>, SYSU, Autumn 2018.</p>
+</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-11-29 13:54:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2018-12-14 22:07:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="teaching.jemdoc">source</a>)
 </div>
 </div>
