--- a/ACLab.html
+++ b/ACLab.html
@@ -49,10 +49,10 @@
 </ul>
 <h2>Final Projects</h2>
 <ul>
-<li><p>正弦波振荡器
+<li><p>电子琴
 <br />正弦波振荡电路是在没有外加输入信号的情况下，依靠电路自激振荡而产生正弦波输出电压的电路。
-广泛应用于通讯、广播、电视等系统，如无线电 通讯发射机中的载波产生电路、超外差接收机中的本机振荡电路等。
-<br />本实验要求产生的正弦波振幅稳定，振荡频率在较宽范围内连续可调。先通过仿真软件验证电路功能。</p>
+利用正弦波振荡电路、功率放大器和喇叭搭建电子琴。
+<br />本实验要求至少产生的7个音阶。先通过仿真软件验证电路功能。</p>
 </li>
 </ul>
 <h2>Resources</h2>
@@ -68,7 +68,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-12-14 22:07:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-03-19 23:00:03 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="ACLab.jemdoc">source</a>)
 </div>
 </div>
