--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>Since July 2018, I have moved to SYSU. </p>
+<li><p>Our research group are constantly recruiting undergraduate students (本科生科研计划), graduate students (研究生), and research fellows (特聘副研究员).</p>
+</li>
+<li><p>Our paper &ldquo;UAV-Enabled Age-Optimal Data Collection in Wireless Sensor Networks&rdquo; has been accepted by IEEE ICC workshop 2019.</p>
+</li>
+<li><p>Our paper &ldquo;On Peak Age of Information in Data Preprocessing enabled IoT Networks&rdquo; has been accepted by IEEE WCNC 2019.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-12-14 22:07:55 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-03-19 23:00:03 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
