--- a/DRL.html
+++ b/DRL.html
@@ -87,6 +87,8 @@
 </li>
 <li><p><a href="https://github.com/devsisters/DQN-tensorflow" target=&ldquo;blank&rdquo;><i>Tensorflow implementation of Human-Level Control through Deep Reinforcement Learning</i></a></p>
 </li>
+<li><p><a href="https://machinelearningmastery.com/learning-rate-for-deep-learning-neural-networks/" target=&ldquo;blank&rdquo;><i>learning-rate-for-deep-learning-neural-networks</i></a>, by Jason Brownlee </p>
+</li>
 </ol>
 <h2>Multi-Agent RL</h2>
 <ol>
@@ -95,7 +97,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-09 18:14:05 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-12-17 12:11:12 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="DRL.jemdoc">source</a>)
 </div>
 </div>
