--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 <table class="imgtable"><tr><td>
 <img src="Xijun_Wang.jpg" alt="alt text" width="150px" height="HEIGHTpx" />&nbsp;</td>
 <td align="left"><p><b>Associate Professor</b></p>
-<p>School of Electronics and Communication Engineering (SECE), Sun Yat-sen University</p>
+<p>School of Electronics and Information Technology, Sun Yat-sen University</p>
 <p>Email: wangxijun[at]mail.sysu.edu.cn</p>
-<p>Office: Mingde Yuan, Xiaoguwei Island, Panyu District, Guangzhou, 510006, China.</p>
 <p><a href="https://scholar.google.com/citations?user=DgTXHKcAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>[Google Citations]</a></p>
 </td></tr></table>
 <h2>Research areas</h2>
@@ -53,7 +52,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-09-09 18:14:04 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-03-12 22:31:58 CST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
